--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-body {background-color: #454545;}
+body {background-color: #ADD8E6;}
 # nav-table {width:800px;}
 # nav-td {width: 1/3px; text-align:center;}
