--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 body {background-color: #000000;}
-body {color: #FFFFFF;}
+p {color: #FFFFFF;}
 # nav-table {width:800px;}
 # nav-td {width: 1/3px; text-align:center;}
