--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ p {color: #FFFFFF;}
 # nav-td {width: 1/3px; text-align:center;}
 {margin:0;
   padding:0;}
-html, body {height:100%;}
+ body {height:100%;}
 # container {min-height:100%;}
 # main {overflow: auto;
 padding-bottom:100px}
