--- a/style.css
+++ b/style.css
@@ -14,4 +14,4 @@ margin:0 auto;}
 #logo {float:left;}
 #nav {float:right;}
 header: after {display:table; clear:both;}
-  
+  <p style="background-image: url('background.jpeg');">
